@@ -1,4 +1,4 @@
-from matplotlib.numerix import which, use_maskedarray
+from matplotlib.numerix import which
 
 if which[0] == "numarray":
     from numarray.ma import *
@@ -9,15 +9,10 @@ elif which[0] == "numeric":
     nomask = None
     getmaskorNone = getmask
 elif which[0] == "numpy":
-    if use_maskedarray:
-        from maskedarray import *
-        print "using maskedarray"
-    else:
-        try:
-            from numpy.ma import *        # numpy 1.05 and later
-        except ImportError:
-            from numpy.core.ma import *   # earlier
-        #print "using ma"
+    try:
+        from numpy.ma import *        # numpy 1.05 and later
+    except ImportError:
+        from numpy.core.ma import *   # earlier
     def getmaskorNone(obj):
         _msk = getmask(obj)
         if _msk is nomask:
