@@ -35,9 +35,6 @@ backend      : %(backend)s
 # you if backend_fallback is True
 #backend_fallback: True
 numerix      : %(numerix)s  # numpy, Numeric or numarray
-#maskedarray : False       # True to use external maskedarray module
-                           # instead of numpy.ma; this is a temporary
-                           # setting for testing maskedarray.
 #interactive  : False      # see http://matplotlib.sourceforge.net/interactive.html
 #toolbar      : toolbar2   # None | classic | toolbar2
 #timezone     : UTC        # a pytz timezone string, eg US/Central or Europe/Paris
