@@ -1,3 +1,7 @@
+2008-12-12 Preparations to eliminate maskedarray rcParams key: its
+           use will now generate a warning.  Similarly, importing
+           the obsolote numerix.npyma will generate a warning. - EF
+
 2008-12-12 Added support for the numpy.histogram() weights parameter
            to the axes hist() method. Docs taken from numpy - MM
 
@@ -5,7 +9,7 @@
 
 2008-12-12 Removed external packages: configobj and enthought.traits
            which are only required by the experimental traited config
-           and are somewhat out of date. If needed, install them 
+           and are somewhat out of date. If needed, install them
            independently, see:
 
            http://code.enthought.com/projects/traits
